# alpha-decay-lab

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py
halflife/: __init__.py  adaptive.py  crowding.py  estimators.py  features.py  utils.py
notebooks/: 01_data_pipeline.ipynb  02_signal_construction.ipynb  03_ic_decay_analysis.ipynb  04_causal_decay_tests.ipynb  05_adaptive_weights.ipynb  06_benchmark_results.ipynb
paper/: main.tex  references.bib
tests/: test_estimators.py
